# multisig_tic-tac-toe

./: .gitignore  README.md
app/: index.html  package.json  pnpm-lock.yaml  tailwind.config.js  tailwind.css
app/src/: App.tsx  AuthenticationRouter.tsx  Layout.tsx  config.ts  main.tsx
app/src/components/: CreateOrJoinGame.tsx  FinishedGameText.tsx  Game.tsx  GameCurrentTurnText.tsx  GameState.tsx  NavBar.tsx
app/src/helpers/: consoleAndToast.ts  error-with-toast.ts  isYourTurn.ts  keys.ts  sui-fetch.ts  suiFetch.ts  txbs.ts  txs.ts
app/src/hooks/: useCreateOrJoinGame.ts  useGame.ts  useGame.tsx  useGameState.ts
app/src/pages/: CreateOrJoinGame.tsx  Game.tsx  NotFoundPage.tsx  UnAuthorizedPage.tsx
app/src/routes/: index.tsx
app/src/types/: game-move.ts  mark-move.ts
client/: Cargo.toml
client/src/: lib.rs
contract/: Move.toml
contract/sources/: multisig_tic_tac_toe.move
contract/tests/: test_multisig_tic_tac_toe.move
rust-cli-client/src/: consts.rs  contract_structs.rs  lib.rs  main.rs  multi_sig_to_string.rs  row_col.rs  startup.rs  tic_tac_toe_client.rs
setup/: publish.sh
tic-tac-toe_client/: .env  Cargo.toml  create_game_resp.pretty_dbg
tic-tac-toe_client/src/: lib.rs  main.rs  objects.rs  transactions.rs
tic-tac-toe_client/src/objects/: mark.rs  tictactoe.rs
tic-tac-toe_client/src/tests/: mod.rs
tic-tac-toe_client/src/transactions/: tests.rs
