[package]
name = "tic-tac-toe_client"
version = "0.1.0"
edition = "2021"
authors = ["flofriday <flohacksfriday@gmail.com>", "nikos <nikos.terzo@mystenlabs.com"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
termcolor = "1.1" # Had to use v1.1
sui-sdk = { git = "https://github.com/MystenLabs/sui", branch = "devnet" }
shared-crypto = { git = "https://github.com/MystenLabs/sui", branch = "devnet" } 
sui-keys = { git = "https://github.com/MystenLabs/sui", branch = "devnet" } 
sui-types = { git = "https://github.com/MystenLabs/sui", branch = "devnet" } 
tokio = "1.32.0"
anyhow = "1.0.75"
dirs = "5.0.1"
