[package]
name = "tic-tac-toe_client"
version = "0.1.0"
edition = "2021"
authors = ["nikos <nikos.terzo@mystenlabs.com"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sui-sdk = { git = "https://github.com/MystenLabs/sui", branch = "main" }
shared-crypto = { git = "https://github.com/MystenLabs/sui", branch = "main" } 
sui-keys = { git = "https://github.com/MystenLabs/sui", branch = "main" } 
sui-types = { git = "https://github.com/MystenLabs/sui", branch = "main" } 
sui-transaction-builder = { git = "https://github.com/MystenLabs/sui", branch = "main" } 
move-core-types = { git = "https://github.com/MystenLabs/sui", subfolder = "external-crates/move/move-core/types", branch = "main" } 
tokio = "1.32.0"
anyhow = "1.0.75"
dirs = "5.0.1"
dotenvy = "0.15.7"
async-recursion = "1.0.4"
serde = { version = "1.0.188", features = ["derive"] }
clap = "4.4.0"
serde_json = "1.0.105"
fastcrypto = "0.1.6"
bcs = "0.1.5"
